--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,8 @@ importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
+importFrom(stats,predict)
+importFrom(stats,var)
 importFrom(stringr,str_to_title)
 importFrom(utils,data)
 importFrom(viridisLite,cividis)
